hphp/test/quick/static_fatal.php.expectf
two
HipHop Fatal error: Call to undefined method two::heh from context two in %stest/quick/static_fatal.php on line 6
